favicon y busqueda por titulo en ingles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TUFILMOTK</title>
+  <link href="favicon.ico?v=1" rel="icon" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <style>
@@ -82,8 +83,7 @@
 </script>
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/lodash/lodash.min.js"></script>
-<script src="node_modules/lowdb/dist/lowdb.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.js?v=1.2"></script>
 
 </html>
